--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "main.js",
     "LICENSE"
   ],
+  "scripts": {
+    "test": "mocha --exit"
+  },
   "author": "Mitchell Adair (https://github.com/mitchwadair)",
   "license": "MIT",
   "bugs": {
@@ -31,5 +34,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1"
   }
 }
