#34: separate client and wh secrets

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "eventsub",
         "event",
         "subscription",
-        "webhooks"
+        "webhooks",
+        "websockets"
     ],
     "main": "main.js",
     "files": [
