--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
   },
   "homepage": "https://www.tesjs.net",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "4.18.1"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^9.2.0",
-    "sinon": "^9.2.1",
-    "supertest": "^6.0.1"
+    "chai": "4.3.6",
+    "mocha": "10.0.0",
+    "sinon": "14.0.0",
+    "supertest": "6.2.3"
   }
 }
