--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "homepage": "https://www.tesjs.net",
   "dependencies": {
-    "express": "4.18.1"
+    "express": "4.18.1",
+    "node-fetch": "2.6.7"
   },
   "devDependencies": {
     "chai": "4.3.6",
