#36: create test env test, improve test structure

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "LICENSE"
   ],
   "scripts": {
-    "test": "mocha --exit"
+    "test": "mocha ./test/tests.js --bail --exit"
   },
   "author": "Mitchell Adair (https://github.com/mitchwadair)",
   "license": "MIT",
