--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "chai": "4.3.6",
     "mocha": "10.0.0",
+    "nock": "13.2.9",
     "sinon": "14.0.0",
     "supertest": "6.2.3"
   }
