--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "homepage": "https://www.tesjs.net",
   "dependencies": {
     "express": "4.18.1",
-    "node-fetch": "2.6.7"
+    "node-fetch": "2.6.7",
+    "ws": "8.10.0"
   },
   "devDependencies": {
     "chai": "4.3.6",
