--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "LICENSE"
   ],
   "scripts": {
-    "test": "mocha ./test/tests.js --bail --exit"
+    "test": "mocha ./test/tests.js --bail --exit",
+    "build": "node ./esbuild/build.js"
   },
   "author": "Mitchell Adair (https://github.com/mitchwadair)",
   "license": "MIT",
@@ -32,6 +33,7 @@
   },
   "homepage": "https://www.tesjs.net",
   "dependencies": {
+    "esbuild": "0.15.13",
     "express": "4.18.1",
     "node-fetch": "2.6.7",
     "ws": "8.10.0"
