#33: add beta check to npm publish

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,7 +16,14 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
+      - uses: Saionaro/extract-package-version@v1.1.1
       - run: npm ci
-      - run: npm publish
+      - if: "contains(steps.extract_version.outputs.version, 'beta')"
+        run: npm publish --tag beta
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+      - if: "!contains(steps.extract_version.outputs.version, 'beta')"
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+        
