--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,6 @@ on:
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -30,3 +29,14 @@ jobs:
     - run: brew install twitchdev/twitch/twitch-cli
     - run: npm ci
     - run: npm test
+
+  build-check: 
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 18
+    - run: npm run build
+    - run: ./scripts/verify-checksum.sh
