--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "chai": "4.3.6",
     "esbuild": "0.15.13",
+    "jsdoc-to-markdown": "8.0.0",
     "mocha": "10.0.0",
     "nock": "13.2.9",
     "sinon": "14.0.0",
