remove build script, put in yaml

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,4 +40,13 @@ jobs:
         node-version: 18
     - run: npm ci
     - run: npm run build
-    - run: bash scripts/verify-build.sh
+    - run: |
+        git diff --name-only
+        CHANGED=$(git diff --name-only | grep -w "dist/tes.min.js")
+        if [[ -n "$CHANGED" ]]; then
+            echo "build changed, run 'npm run build' to commit new build"
+            exit 1
+        else
+            echo "builds match, build is up to date"
+            exit 0
+        fi
