--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,4 +40,13 @@ jobs:
         node-version: 18
     - run: npm ci
     - run: npm run build
-    - run: bash scripts/verify-checksum.sh
+    - shell: bash
+      run: |
+        CHANGED=$(git diff --name-only dist/tes.min.js)
+        if [[ -n "$CHANGED" ]]; then
+            echo "build changed, run 'npm run build' to commit new build"
+            exit 1
+        else
+            echo "builds match, build is up to date"
+            exit 0
+        fi
