--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "scripts": {
     "test": "mocha ./test/tests.js --bail --exit",
-    "build": "node ./scripts/build.js"
+    "build": "node ./scripts/build.js && node ./scripts/docs.js"
   },
   "author": "Mitchell Adair (https://github.com/mitchwadair)",
   "license": "MIT",
@@ -40,6 +40,7 @@
   "devDependencies": {
     "chai": "4.3.6",
     "esbuild": "0.15.13",
+    "jsdoc-to-markdown": "8.0.0",
     "mocha": "10.0.0",
     "nock": "13.2.9",
     "sinon": "14.0.0",
