--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tesjs",
   "version": "1.0.0-beta.1",
-  "description": "A module to streamline the use of Twitch EventSub in Node.js applications",
+  "description": "A module to streamline the use of Twitch EventSub in Node.js and Web applications",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mitchwadair/tesjs.git"
@@ -14,7 +14,8 @@
     "eventsub",
     "event",
     "subscription",
-    "webhooks"
+    "webhook",
+    "websocket"
   ],
   "main": "main.js",
   "files": [
